// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteList should render a default component 1`] = `
<InfiniteList
  ariaLabel="Infinite List"
  dividerStyle="none"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isFinishedLoading={false}
  paddingStyle="none"
  role="none"
/>
`;

exports[`InfiniteList should render with initial children 1`] = `
<InfiniteList
  ariaLabel="Infinite List"
  dividerStyle="none"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isFinishedLoading={true}
  paddingStyle="none"
  role="none"
>
  <InjectIntl(ListItem)
    key="item-1"
  >
    <div
      className="item"
    >
      item 1
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    key="item-2"
  >
    <div
      className="item"
    >
      item 2
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    key="item-3"
  >
    <div
      className="item"
    >
      item 3
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    key="item-4"
  >
    <div
      className="item"
    >
      item 4
    </div>
  </InjectIntl(ListItem)>
</InfiniteList>
`;

exports[`InfiniteList should render with list props 1`] = `
<InfiniteList
  ariaLabel="Infinite List"
  dividerStyle="standard"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isFinishedLoading={true}
  paddingStyle="standard"
  progressiveLoadingMessage="Loading allergies..."
  role="listbox"
>
  <InjectIntl(ListItem)
    isSelectable={true}
    key="item-1"
  >
    <div
      className="item"
    >
      item 1
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    isSelectable={true}
    isSelected={true}
    key="item-2"
  >
    <div
      className="item"
    >
      item 2
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    isSelectable={true}
    key="item-3"
  >
    <div
      className="item"
    >
      item 3
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    isSelectable={true}
    key="item-4"
  >
    <div
      className="item"
    >
      item 4
    </div>
  </InjectIntl(ListItem)>
</InfiniteList>
`;

exports[`InfiniteList should render with list with style props 1`] = `
<InfiniteList
  ariaLabel="Infinite List"
  dividerStyle="standard"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isFinishedLoading={true}
  paddingStyle="standard"
  role="listbox"
>
  <InjectIntl(ListItem)
    className="item1"
    isSelectable={true}
    key="item-1"
  >
    <div
      className="item"
    >
      item 1
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    className="item2"
    isSelectable={true}
    isSelected={true}
    key="item-2"
  >
    <div
      className="item"
    >
      item 2
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    className="item3"
    isSelectable={true}
    key="item-3"
  >
    <div
      className="item"
    >
      item 3
    </div>
  </InjectIntl(ListItem)>
  <InjectIntl(ListItem)
    className="item4"
    isSelectable={true}
    key="item-4"
  >
    <div
      className="item"
    >
      item 4
    </div>
  </InjectIntl(ListItem)>
</InfiniteList>
`;

exports[`InfiniteList should render with no children and loading 1`] = `
<InfiniteList
  ariaLabel="Infinite List"
  dividerStyle="none"
  initialLoadingIndicator={
    <div
      className="initialLoadingIndicator"
    />
  }
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isFinishedLoading={false}
  paddingStyle="none"
  progressiveLoadingIndicator={
    <div
      className="progressiveLoadingIndicator"
    />
  }
  role="none"
/>
`;
